# interpals-client

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: login.py  messages.py  profile.py  search.py
interpals_client/: __init__.py  auth.py  client.py  exceptions.py  messages.py  profiles.py  search.py  session.py  threads.py  transport.py
interpals_client/models/: __init__.py  message.py  profile.py  thread.py  user.py
interpals_client/utils/: __init__.py
tests/: test_models.py
